--- a/fast-service-front/package.json
+++ b/fast-service-front/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fast-service",
+  "name": "event-manager",
   "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "thiagocorrea-hotmart <thiago.correa@hotmart.com>",
+  "description": "Gerenciador de eventos",
+  "author": "",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,13 +10,20 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "element-ui": "^2.15.6",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "axios": "^0.21.1",
+    "babel": "^6.23.0",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
+    "element-ui": "^2.15.1",
+    "vue": "^2.6.12",
+    "vue-m-message": "^3.1.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -32,6 +39,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -39,6 +47,8 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
